# sundai-protein-folding-bench

./: .dockerignore  .gitattributes  .gitignore  GETTING_STARTED.md  README.md  benchmark.py  benchmark.sh  docker-compose.yml  pyproject.toml  scorer.py
baseline/: train.py
baseline_submission/: config.json
data/: DATASET_PLAN.md
data/public_dev/: README.md  manifest.json
data/public_dev/test/: manifest.json
data/public_dev/train/: manifest.json
data/public_dev/val/: manifest.json
data/public_lb/: README.md  manifest.json
data/public_lb_v1/: manifest.json
data/public_lb_v1/test/: manifest.json
data/public_lb_v1/test/esm/: 7ftv_A.pt  8g8r_A.pt  8i85_A.pt
data/public_lb_v1/train/: manifest.json
data/public_lb_v1/val/: manifest.json
data/simplefold_hackathon_v1/: manifest.json
data/simplefold_hackathon_v1/test/: manifest.json
data/simplefold_hackathon_v1/train/: manifest.json
data/simplefold_hackathon_v1/val/: manifest.json
docker/api/: Dockerfile  start-api.sh
docker/worker/: Dockerfile  runtime-spec.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LOCAL_SERVICE_HANDOFF.md  PROD_SCHEMA.md  SUBMISSION_SPEC.md
reference/: baseline_config.json  baseline_train.py
sdk/: __init__.py  api.py  simplefold.py  structures.py
service/: __init__.py  app.py  evaluator.py  logging_utils.py  schema.sql
service/web/: index.html  instructions.html  metrics.html
starter/: config.json  train.py
submission/: config.json  train.py
tools/: build_simplefold_bundle.py  precompute_esm_cache.py  run_simplefold_cached.py
worker/: run_submission.py
(+168 files in other folders)
